[bug 721568] Keep green search arrows from wrapping.
...at least until *really* illegibly small zoom sizes. Is something wrong with FF's scaling algorithm?

I'd have liked to make all this stuff use percents, but there's that dratted magnifying glass that has a hard-set pixel size.

--- a/media/css/home.css
+++ b/media/css/home.css
@@ -67,7 +67,7 @@ html[lang=ja] body div#featured {
 }
 
 #support-search input.text {
-    width: 329px;
+    width: 326px;
 }
 
 .html-rtl #support-search input.text {
